# Minesweeper-2026

./: .clang-format  .clang-tidy  .dockerignore  .env.example  .gitignore  CMakeLists.txt  Caddyfile  Dockerfile  README.md  cli  docker-compose.yml  vcpkg.json
caddy/: Dockerfile
migrations/: 001_init.sql  002_add_avatar.sql  003_fix_avatar_default.sql  004_persist_settings_and_games.sql  005_add_ip_to_records.sql
src/: main.cpp
src/api/: AuthController.cpp  AuthController.h  CMakeLists.txt  GameController.cpp  GameController.h  JwtHelper.cpp  JwtHelper.h  LeaderboardController.cpp  LeaderboardController.h  UserController.cpp  UserController.h
src/app/: App.cpp  App.h  CMakeLists.txt
src/db/: CMakeLists.txt  DbClient.cpp  DbClient.h  GameRepository.cpp  GameRepository.h  RecordRepository.cpp  RecordRepository.h  UserRepository.cpp  UserRepository.h
src/game/: Board.cpp  Board.h  CMakeLists.txt  Cell.h  Difficulty.cpp  Difficulty.h  GameSession.cpp  GameSession.h
src/session/: CMakeLists.txt  PlayerSession.cpp  PlayerSession.h
tests/unit/: CMakeLists.txt  test_board.cpp
web/: app.js  index.html  style.css
